Added repository classes and dataContext

--- a/Aws-s3.Platform/Aws-s3.Platform.csproj
+++ b/Aws-s3.Platform/Aws-s3.Platform.csproj
@@ -8,8 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Domain\" />
-    <Folder Include="Infrastructure\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.26" />
   </ItemGroup>
 
 </Project>
